# CorridorROS1.0

./: frames.gv
amcl/examples/: amcl_diff.launch
costmap_2d/launch/: example_params.yaml
costmap_2d/test/: costmap_params.yaml
motion_planner_baselines/drl_vo_nav/launch/: drl_vo_inference.launch  drl_vo_nav.launch  drl_vo_nav_train.launch
motion_planner_baselines/drl_vo_nav/scripts/: cnn_data_pub.py  drl_vo_inference.py  drl_vo_train.py  pure_pursuit.py  robot_pose_pub.py  track_ped_pub.py
motion_planner_baselines/dwa_planner/params/: costmap_common_params.yaml
move_base_bridge/costmap_param/: costmap_common_params.yaml  dynamic_global_costmap_params.yaml  static_local_costmap_params.yaml
move_base_bridge/launch/: amcl_demo_drl.launch  move_base.launch
move_base_bridge/launch/includes/: move_base_cnn.launch.xml  (+1 more)
move_base_bridge/param/: costmap_common_params.yaml
move_base_bridge/scripts/: evaluate_navigation.py
pedsim_gazebo_plugin/launch/: lobby_45ped.launch  scene1.launch  test.launch
pedsim_gazebo_plugin/models/: actor_model.sdf
pedsim_gazebo_plugin/scripts/: pedsim_to_gazbo_world.py  spawn_pedsim_agents.py
pedsim_gazebo_plugin/worlds/: lobby_45ped.world  test.world
pedsim_map/: CMakeLists.txt
pedsim_map/include/pedsim_map/: real_map.h  sim_map.h
pedsim_map/launch/: pedsim_map.launch
pedsim_map/params/: real_map.yaml
pedsim_map/src/: real_map.cpp  real_map_node.cpp  sim_map.cpp  sim_map_node.cpp
pedsim_ros_imp/pedsim_simulator/: CMakeLists.txt  package.xml
robot_gym/envs/: drl_nav_envs.py
robot_gym/scripts/: test.py
(+35 files in other folders)
